Fix layout issue on desktop view

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav a.active{
         right:0%;
         width: 60%;
         border-left: 1.8px solid #2D3C7D;
-        border-bottom: ;
+        border-bottom: none;
         border-bottom-left-radius: 1rem;
         padding: 1rem;
         background-color: white;
@@ -108,6 +108,7 @@ nav a.active:hover {
     background-color: transparent;
     color: #2D3C7D;
 
+}
 }
 
 section{
